# finden

./: .gitignore  README.md  install_files.txt  meson.build  uninstall.sh
data/: free.toq.finden.desktop.download  free.toq.finden.metainfo.xml
src/: config.c  config.h  main.c
src/miniterm/: meson.build  miniterm.c
src/po/: toq-finden_en_US.po  toq-finden_pl.po  toq-finden_pl_PL.po
